--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1 class="title">Desserts Page</h1>
+      <h1 class="title"> デザートページ </h1>
     </header>
     <main>
       <button id="cart-btn" type="button" class="btn">
