今から日本語

--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
     </header>
     <main>
       <button id="cart-btn" type="button" class="btn">
-        <span id="show-hide-cart">Show</span> Cart
+        <span id="show-hide-cart">表示</span> カート
       </button>
+      
       <div id="cart-container">
-        <button class="btn" id="clear-cart-btn">Clear Cart</button>
+        <button class="btn" id="clear-cart-btn">カートをクリア </button>
         <div id="products-container"></div>
-        <p>Total number of items: <span id="total-items">0</span></p>
-        <p>Subtotal: <span id="subtotal">$0</span></p>
-        <p>Taxes: <span id="taxes">$0</span></p>
-        <p>Total: <span id="total">$0</span></p>
+        <div id="products-container"></div>
+        <p>商品の総数: <span id="total-items">0</span></p>
+        <p>小計: <span id="subtotal">¥0</span></p>
+        <p>税金: <span id="taxes">¥0</span></p>
+        <p>合計: <span id="total">¥0</span></p>
       </div>
       <div id="dessert-card-container"></div>
     </main>
